--- a/frontend/demand.html
+++ b/frontend/demand.html
@@ -714,7 +714,9 @@
   <script defer src="src/hw-owner-complexity-chart.js?v=2"></script>
   <script defer src="src/supplier-popup.js?v=6"></script>
   <script defer src="src/rm-supplier-popup.js?v=11"></script>
-  <script defer src="src/demand.js?v=46"></script>
+  <script defer src="src/supplier-type-popup.js?v=1"></script>
+  <script defer src="src/hw-owner-popup.js?v=1"></script>
+  <script defer src="src/demand.js?v=48"></script>
   <script defer src="src/dropdowns.js?v=2"></script>
 
   <!-- Chatbot Icon -->
