--- a/frontend/GapAnalysis.html
+++ b/frontend/GapAnalysis.html
@@ -488,7 +488,7 @@
   <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <!-- Gap Analysis Dashboard JavaScript -->
-  <script src="src/gap-analysis.js"></script>
+  <script src="src/js/gap-analysis/gap-analysis.js"></script>
 
 </body>
 </html>
