--- a/frontend/datatable.html
+++ b/frontend/datatable.html
@@ -468,7 +468,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   
   <!-- DataTable Script -->
-  <script src="src/datatable.js"></script>
+  <script src="src/js/datatable/datatable.js"></script>
 
 </body>
 
