--- a/frontend/GapAnalysis.html
+++ b/frontend/GapAnalysis.html
@@ -305,6 +305,24 @@
         </button>
     </div>
     
+    <!-- Gap % by Raw Material Chart -->
+    <div class="card mb-4">
+      <div class="card-header d-flex justify-content-between align-items-center">
+        <div>
+          <h5 class="mb-0">
+            <i class="fas fa-chart-bar text-primary me-2"></i>
+            Gap % by Raw Material
+          </h5>
+          <small class="text-muted">Click any bar to filter suppliers and parts →</small>
+        </div>
+      </div>
+      <div class="card-body">
+        <div class="chart-container" style="height: 400px;">
+          <canvas id="gapByRawMaterialChart"></canvas>
+        </div>
+      </div>
+    </div>
+
     <!-- Gap Analysis KPIs -->
     <div class="d-flex gap-3 mb-4 flex-wrap" id="gap-analysis-kpis">
       <!-- Total Gaps KPI -->
